Tue Mar 07 10:28:16 2000  bala  <bala@cs.wustl.edu>

        * ACE version 5.0.15 released.

Mon Mar  6 17:56:56 2000  Ossama Othman  <ossama@uci.edu>

	* bin/make_release (release_tag_files):

	  Added missing declaration of this variable.

Mon Mar  6 13:30:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>

	* tests/run_tests.vxworks: Removed Cached_Conn_Test from the
	  list as this test fails for the current configuration. Until
          researched completely, it has been disabled on vxworks.
	  Thanks to David Hall <David.Hall@grc.nasa.gov> for reporting
	  this bug.

Sun Mar  5 21:32:45 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

        * ace/CDR_Stream.cpp:
          When allocating a new buffer in ACE_CDR::grow() we must leave
          enough room for the buffer required by the user *and* space to
          adjust the alignment.  Thanks to Bala and Jeff for tracking this
          down.

Fri Mar 03 17:01:54 2000  Steve Huston  <shuston@riverace.com>

        * tests/Malloc_Test.cpp: Changed a couple of straggling
          ACE_HAS_POSITION_INDEPENDENT_MALLOC to
          ACE_HAS_POSITION_INDEPENDENT_POINTERS.

Fri Mar 03 11:52:10 2000  David L. Levine  <levine@cs.wustl.edu>

        * include/makeinclude/rules.nested.GNU: added -f $(MAKEFILE)
          to $(MAKE) invocation, to support overriding of the default
          Makefile name.  Added definition of MAKEFILE, if it is null.
          Thanks to Wei Chiang <wei.chiang@nokia.com> for suggesting this.

        * include/makeinclude/rules.local.GNU: changed test to see if
          MAKEFILE macro isn't set from ifndef to ifeq null, for consistency
          with above addition to rules.nested.GNU.

Thu Mar  2 13:23:39 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/TLI.cpp, TLI_Connector.cpp, TLI_Stream.cpp: Removed comments
          regarding the quality of SunOS 4...  Thanks to Malcolm Spence
          <spence_m@ociweb.com> for reporting this!
